@@ -203,6 +203,25 @@ proc grep { args } {
     return $grep_out
 }
 
+#
+# Remove elements based on patterns. elements are delimited by spaces.
+# pattern is the pattern to look for using glob style matching
+# list is the list to check against
+# returns the new list
+#
+proc prune { list pattern } {
+    set tmp {}
+    foreach i $list {
+	verbose "Checking pattern \"$pattern\" against $i" 3
+	if {![string match $pattern $i]} {
+	    lappend tmp $i
+	} else {
+	    verbose "Removing element $i from list" 3
+	}
+    }
+    return $tmp
+}
+
 
 # Check if a testcase should be run or not
 #
