@@ -10,8 +10,8 @@ Changes since 1.5.3:
    2 if an exception is raised by the Tcl interpreter.
 3. runtest now exits with the standard exit codes of programs that are
    terminated by the SIGINT, SIGTERM and SIGQUIT signals.
-4. The user-visible utility procedures `absolute', `prune', `psource'
-   and `slay' have been removed.  If a testsuite uses any of these
+4. The user-visible utility procedures `absolute', `psource' and
+   `slay' have been removed.  If a testsuite uses any of these
    procedures, a copy of the procedure should be made and placed in
    the lib directory of the testsuite.
 5. Support was added for testing the D compiler.
